syntax = "proto3";

option java_multiple_files = true;
option java_package = "klattice.api";
option java_outer_classname = "KLApiProto";

package klattice.api;

import "substrait/plan.proto";
import "substrait/type.proto";

service Query {
    rpc Prepare (QueryContext) returns (substrait.Plan) {};
}

service Schema {
    rpc Query(SchemaQuery) returns (SchemaSourceDetails) {};
}

message QueryContext {
    repeated SchemaSourceDetails sources = 1;
    string query = 2;
}

message SchemaQuery {
    uint64 schema_id = 1;
}

message SchemaSourceDetails {
    uint64 schema_id = 1;
    string relName = 2;
    repeated Projection projections = 3;
}

message Projection {
    uint64 schema_id = 1;
    string relName = 2;
    repeated string columnName = 3;
    repeated substrait.Type typing = 4;
}